ToDo機能を実装

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,8 +8,28 @@
 
     <main>
       <div>
-        <h1>メイン領域</h1>
-        <p>メイン部分</p>
+        <h1>ToDo</h1>
+        <h2>タスクの追加</h2>
+        <form action="/create_todo" method="post">
+          ユーザID<select name="user_id">
+            <option value="">ユーザを選択してください</option>
+            <% for(let user of users){ %>
+            <option value="<%= user.id %>"><%= user.name %></option>
+            <% } %></select
+          ><br />
+          TODOタイトル<input type="text" name="title" /><br />
+          <button type="submit">＋</button>
+        </form>
+        <h2>登録済みタスク</h2>
+        <% for(let todo of todos){ %>
+        <li>
+          <a href="/todo_detail/<%= todo.id %>">
+            <span>ユーザID：<%= todo.user_id %></span><br /><span
+              >ToDoタイトル：<%= todo.title %></span
+            >
+          </a>
+        </li>
+        <% } %>
       </div>
     </main>
 
