--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,7 +10,7 @@
       <div>
         <h1>ToDo</h1>
         <h2>タスクの追加</h2>
-        <form action="/todo" method="post">
+        <form id="create_todo_form">
           ユーザID<select name="user_id">
             <option value="">ユーザを選択してください</option>
             <% for(let user of users){ %>
@@ -34,5 +34,6 @@
     </main>
 
     <footer><%- include('../partials/footer'); %></footer>
+    <script src="/index.js"></script>
   </body>
 </html>
